syntax = "proto3";
package listing;

service ListingService{
    rpc CreateListing (CreateListingDto) returns (ListingResponseDto);
    rpc GetListings(Empty) returns (GetListingsResponseDto);
    rpc GetListingsOfUser(UserIdDto) returns (GetListingsResponseDto);
    rpc GetListingById(ListingIdDto) returns (ListingResponseDto);
    rpc GetFavorites(GetFavoritesDto) returns (GetListingsResponseDto);
    rpc DeleteListing(DeleteListingDto) returns (DeleteResponseDto);
    rpc GetListingsByOption(GetListingsByOptionDto) returns (GetListingsResponseDto);
}

message Empty{}
message GetListingsByOptionDto{
  optional int32 roomCount=1;
  optional int32 guestCount=2;
  optional int32 bathroomCount=3;
  optional string startDate=4;
  optional string endDate=5;
  optional string locationValue=6;
  optional string category=7;
}
message UserIdDto{
    string userId=1;
}
message ListingIdDto{
  int32 listingId=1;
  optional Include include=2;
}

message Include{
  optional bool user=1;
  optional bool reservations=2;
}

message User {
  optional string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string emailVerified = 4;
  optional string image = 5;
  optional string hashedPassword = 6;
  repeated int32 favoriteIds = 7;
  optional string createdAt = 8;
  optional string updatedAt = 9;
  // repeated Account accounts = 10;   // User can have multiple accounts
}

message CreateListingDto {
    string title = 1;
    string description = 2;
    string imageSrc = 3;
    string category = 4;
    int32 roomCount = 5;
    int32 bathroomCount = 6;
    int32 guestCount = 7;
    string locationValue = 8;
    string userId = 9;
    int32 price = 10;
}

message ListingResponseDto {
    int32 id = 1;
    string title = 2;
    string description = 3;
    string imageSrc = 4;
    string category = 5;
    int32 roomCount = 6;
    int32 bathroomCount = 7;
    int32 guestCount = 8;
    string locationValue = 9;
    string userId = 10;
    int32 price = 11;
    optional string createdAt = 12;
    optional User user=13;
    repeated ReservationDto reservations=14;
}

message ReservationDto{
  int32 id = 1;
  string userId = 2;
  int32 listingId = 3;
  string startDate = 4;
  string endDate = 5;
  int32 totalPrice = 6;
  string createdAt = 7;
  optional ListingResponseDto listing =8;
}
message GetFavoritesDto{
    repeated int32 listingIds=1;
}

message GetListingsResponseDto{
    repeated ListingResponseDto listings = 1;
}

message DeleteListingDto{
  int32 listingId=1;
  string userId=2;
}
message DeleteResponseDto{
  string message=1;
}
//   protoc --plugin=protoc-gen-ts_proto=.\node_modules\.bin\protoc-gen-ts_proto.cmd --ts_proto_out=.\ --ts_proto_opt=nestJs=true .\proto\listing.proto

